2003-01-23  Werner Koch  <wk@gnupg.org>

	* rsa.c (generate): New arg USE_E to request a specific public
	exponent.
	(_gcry_rsa_generate): Ditto.
	* elgamal.c (_gcry_elg_generate): Must add an dummy argument
	instead of USE_E.
	* dsa.c (_gcry_dsa_generate): Ditto.
	* pubkey.c (dummy_generate): Ditto.
	(pubkey_generate): Add USE_E arg and pass it down.
	(gcry_pk_genkey): Detect "rsa-use-e" parameter and pass it to generate.

	* pubkey.c (sexp_to_enc): New arg RET_MODERN.
	(gcry_pk_decrypt): Make use of it to return a real S-expression.
	Return better error codes.
	(gcry_pk_verify): Return better error codes.

2003-01-21  Werner Koch  <wk@gnupg.org>

	* random.c (gcry_random_add_bytes): Add QUALITY argument, let
	function return an error code and disable its core for now.

2003-01-21  Timo Schulz  <twoaday@freakmail.de>

	* random.c (gcry_random_add_bytes): New. Function to add external
	random to the pool.
	
2003-01-20  Simon Josefsson  <jas@extundo.com>

	* crc.c: New.
	* Makefile.am (EXTRA_PROGRAMS, EXTRA_crc_SOURCES): Add crc.c.
	* md.c (gcry_md_get_algo_dlen): Add values for CRC.

2003-01-20  Werner Koch  <wk@gnupg.org>

	* sha256.c: New.
	* bithelp.h (ror): New.
	* Makfile.am: Add sha256.c.
	* md.c (oid_table): Add values for SHA256 et al.
	(gcry_md_get_algo_dlen): Likewise

2003-01-20  Werner Koch  <wk@gnupg.org>

	* pubkey.c (gcry_pk_get_keygrip): Implemented keygrips for DSA
	and ElGamal.

2003-01-17  Werner Koch  <wk@gnupg.org>

	* cipher.c (gcry_cipher_encrypt): Reworked so that the output will
	never contain the plaintext even if the caller did not checked the
	return value.

	* md.c (gcry_md_get_algo): Changed error code to GCRYERR_GENERAL
	because we don't have an invalid md algo but no algorithm enabled.

	* pubkey.c (gcry_pk_genkey): Changed error code for bounds check
	of table parameters to GCRYERR_INTERNAL.

	* md.c (gcry_md_open): Partly reverted Timo's change from
	2002-10-10 by removing the check for the algorithm.  An algorithm