@@ -1,5 +1,5 @@
 /* rndlinux.c  -  raw random number for OSes with /dev/random
- *	Copyright (C) 1998, 2001, 2002 Free Software Foundation, Inc.
+ * Copyright (C) 1998, 2001, 2002, 2003  Free Software Foundation, Inc.
  *
  * This file is part of Libgcrypt.
  *
@@ -43,6 +43,7 @@
 #include "types.h"
 #include "g10lib.h"
 #include "dynload.h"
+#include "rand-internal.h"
 
 static int open_device( const char *name, int minor );
 static int gather_random( void (*add)(const void*, size_t, int), int requester,
@@ -122,9 +123,14 @@ gather_random( void (*add)(const void*, size_t, int), int requester,
 	if( !(rc=select(fd+1, &rfds, NULL, NULL, &tv)) ) {
           if( !warn )
             {
+#ifndef IS_MODULE
+              _gcry_random_progress ("need_entropy", 'X', 0, (int)length);
+#else
               log_info (_("not enough random bytes available (need %d bytes)\n"),
                         (int)length);
+
               log_info (_("please do some other work to give the OS a chance to collect more entropy\n"));
+#endif
             }
               warn = 1;
 	    continue;
